// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`component/doc-templates/BasicInformation Snapshots Default 1`] = `
<div
  class="container"
>
  <div
    class="layout row wrap"
  >
    <div
      class="flex xs12 sm12 md8 xl9"
    >
      <div
        class="ml-2 mt-2 v-card v-sheet theme--light"
      >
        <div
          class="v-card__title"
        >
          <h3
            class="grey--text"
          >
            
          Basic Information
        
          </h3>
           
          <!---->
        </div>
         
        <hr
          class="v-divider theme--light"
        />
         
        <div
          class="v-card__text"
        >
          <div>
            <div
              class="flex xs12"
            >
              <div
                class="mb-2 text-uppercase grey--text font-weight-bold"
              >
                
              Title
            
              </div>
               
              <div
                class="v-input v-text-field v-text-field--single-line v-text-field--enclosed v-text-field--outline v-text-field--placeholder theme--light"
              >
                <div
                  class="v-input__control"
                >
                  <div
                    class="v-input__slot"
                  >
                    <div
                      class="v-text-field__slot"
                    >
                      <input
                        placeholder="Title"
                        type="text"
                      />
                    </div>
                  </div>
                  <div
                    class="v-text-field__details"
                  >
                    <div
                      class="v-messages theme--light"
                    >
                      <div
                        class="v-messages__wrapper"
                      />
                    </div>
                  </div>
                </div>
              </div>
            </div>
             
            <div
              class="flex xs12"
            >
              <div
                class="mb-2 text-uppercase grey--text font-weight-bold"
              >
                
              Short description
            
              </div>
               
              <div
                class="v-input v-text-field v-text-field--single-line v-text-field--enclosed v-text-field--outline v-text-field--placeholder theme--light"
              >
                <div
                  class="v-input__control"
                >
                  <div
                    class="v-input__slot"
                  >
                    <div
                      class="v-text-field__slot"
                    >
                      <input
                        placeholder="Short description"
                        type="text"
                      />
                    </div>
                  </div>
                  <div
                    class="v-text-field__details"
                  >
                    <div
                      class="v-messages theme--light"
                    >
                      <div
                        class="v-messages__wrapper"
                      />
                    </div>
                  </div>
                </div>
              </div>
            </div>
             
            <div
              class="flex xs12"
            >
              <div
                class="mb-2 text-uppercase grey--text font-weight-bold"
              >
                
              Content
            
              </div>
               
              <div
                class="editor"
              >
                <div
                  class="menubar"
                >
                  <div
                    class="menubar"
                  >
                    <button
                      class="menubar__button"
                    >
                      
          H1
        
                    </button>
                     
                    <button
                      class="menubar__button"
                    >
                      
          H2
        
                    </button>
                     
                    <button
                      class="menubar__button"
                    >
                      
          H3
        
                    </button>
                     
                    <button
                      class="v-btn v-btn--icon v-btn--depressed theme--light"
                      type="button"
                    >
                      <div
                        class="v-btn__content"
                      >
                        <i
                          aria-hidden="true"
                          class="v-icon material-icons theme--light"
                        >
                          format_bold
                        </i>
                      </div>
                    </button>
                     
                    <button
                      class="v-btn v-btn--icon v-btn--depressed theme--light"
                      type="button"
                    >
                      <div
                        class="v-btn__content"
                      >
                        <i
                          aria-hidden="true"
                          class="v-icon material-icons theme--light"
                        >
                          format_italic
                        </i>
                      </div>
                    </button>
                     
                    <button
                      class="v-btn v-btn--icon v-btn--depressed theme--light"
                      type="button"
                    >
                      <div
                        class="v-btn__content"
                      >
                        <i
                          aria-hidden="true"
                          class="v-icon material-icons theme--light"
                        >
                          format_underlined
                        </i>
                      </div>
                    </button>
                     
                    <button
                      class="v-btn v-btn--depressed theme--light"
                      type="button"
                    >
                      <div
                        class="v-btn__content"
                      >
                        
          Add variable
        
                      </div>
                    </button>
                  </div>
                </div>
                 
                <div
                  class="editor__content pa-3"
                >
                  <div
                    class="ProseMirror"
                    contenteditable="true"
                    tabindex="0"
                  >
                    <p>
                      <br />
                    </p>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
         
        <div
          class="v-card__actions"
        >
          <button
            class="v-btn v-btn--depressed theme--light"
            type="button"
          >
            <div
              class="v-btn__content"
            >
              
          Cancel
        
            </div>
          </button>
           
          <button
            class="v-btn v-btn--depressed theme--light primary"
            type="button"
          >
            <div
              class="v-btn__content"
            >
              
          Submit
        
            </div>
          </button>
           
          <div
            class="spacer"
          />
           
          <button
            class="v-btn v-btn--depressed theme--light"
            type="button"
          >
            <div
              class="v-btn__content"
            >
              
          Delete
        
            </div>
          </button>
        </div>
      </div>
    </div>
     
    <div
      class="flex xs12 sm12 md4 xl3"
    >
      <div
        class="ml-2 mt-2 v-card v-sheet theme--light"
      >
        <div
          class="v-card__text"
        >
          <!---->
           
          <!---->
           
          <div
            class="v-input v-text-field v-text-field--single-line v-text-field--enclosed v-text-field--outline v-select theme--light"
            role="combobox"
          >
            <div
              class="v-input__control"
            >
              <div
                class="v-input__slot"
              >
                <div
                  class="v-select__slot"
                >
                  <div
                    class="v-select__selections"
                  >
                    <input
                      aria-readonly="false"
                      autocomplete="on"
                      readonly="readonly"
                      type="text"
                    />
                  </div>
                  <div
                    class="v-input__append-inner"
                  >
                    <div
                      class="v-input__icon v-input__icon--append"
                    >
                      <i
                        aria-hidden="true"
                        class="v-icon material-icons theme--light"
                      >
                        arrow_drop_down
                      </i>
                    </div>
                  </div>
                </div>
                <div
                  class="v-menu"
                >
                  <div
                    class="v-menu__content theme--light "
                    style="max-height: 300px; min-width: 0px; max-width: auto; top: 12px; left: 0px; transform-origin: top left; z-index: 0; display: none;"
                  >
                    <div
                      class="v-select-list v-card theme--light"
                    >
                      <div
                        class="v-list theme--light"
                        role="list"
                      >
                        <div
                          role="listitem"
                        >
                          <div
                            class="v-list__tile theme--light"
                          >
                            <div
                              class="v-list__tile__content"
                            >
                              <div
                                class="v-list__tile__title"
                              >
                                No data available
                              </div>
                            </div>
                          </div>
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
              <div
                class="v-text-field__details"
              >
                <div
                  class="v-messages theme--light"
                >
                  <div
                    class="v-messages__wrapper"
                  />
                </div>
              </div>
            </div>
          </div>
        </div>
         
        <div
          class="v-card__actions"
        >
          <div
            class="layout text-xs-center row wrap"
          >
            <div
              class="flex mb-2 xs12"
            >
              <button
                class="v-btn v-btn--block v-btn--depressed theme--light primary"
                type="button"
              >
                <div
                  class="v-btn__content"
                >
                  
              Submit
            
                </div>
              </button>
            </div>
             
            <div
              class="flex mb-2 xs12"
            >
              <button
                class="v-btn v-btn--block v-btn--disabled v-btn--depressed theme--light"
                disabled="disabled"
                type="button"
              >
                <div
                  class="v-btn__content"
                >
                  
              Preview
            
                </div>
              </button>
            </div>
             
            <div
              class="flex xs12"
            >
              <!---->
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`component/doc-templates/BasicInformation Snapshots Loading 1`] = `
<div
  class="container"
>
  <div
    class="layout row wrap"
  >
    <div
      class="flex xs12 sm12 md8 xl9"
    >
      <div
        class="ml-2 mt-2 v-card v-sheet theme--light"
      >
        <div
          class="v-card__title"
        >
          <h3
            class="grey--text"
          >
            
          Basic Information
        
          </h3>
           
          <div
            aria-valuemax="100"
            aria-valuemin="0"
            class="v-progress-linear"
            role="progressbar"
            style="height: 7px;"
          >
            <div
              class="v-progress-linear__background primary"
              style="height: 7px; opacity: 0.3; width: 100%;"
            />
            <div
              class="v-progress-linear__bar"
            >
              <div
                class="v-progress-linear__bar__indeterminate v-progress-linear__bar__indeterminate--active"
              >
                <div
                  class="v-progress-linear__bar__indeterminate long primary"
                />
                <div
                  class="v-progress-linear__bar__indeterminate short primary"
                />
              </div>
              <!---->
            </div>
          </div>
        </div>
         
        <hr
          class="v-divider theme--light"
        />
         
        <div
          class="v-card__text"
        >
          <div>
            <div
              class="flex xs12"
            >
              <div
                class="mb-2 text-uppercase grey--text font-weight-bold"
              >
                
              Title
            
              </div>
               
              <div
                class="v-input v-text-field v-text-field--single-line v-text-field--enclosed v-text-field--outline v-text-field--placeholder theme--light"
              >
                <div
                  class="v-input__control"
                >
                  <div
                    class="v-input__slot"
                  >
                    <div
                      class="v-text-field__slot"
                    >
                      <input
                        placeholder="Title"
                        type="text"
                      />
                    </div>
                  </div>
                  <div
                    class="v-text-field__details"
                  >
                    <div
                      class="v-messages theme--light"
                    >
                      <div
                        class="v-messages__wrapper"
                      />
                    </div>
                  </div>
                </div>
              </div>
            </div>
             
            <div
              class="flex xs12"
            >
              <div
                class="mb-2 text-uppercase grey--text font-weight-bold"
              >
                
              Short description
            
              </div>
               
              <div
                class="v-input v-text-field v-text-field--single-line v-text-field--enclosed v-text-field--outline v-text-field--placeholder theme--light"
              >
                <div
                  class="v-input__control"
                >
                  <div
                    class="v-input__slot"
                  >
                    <div
                      class="v-text-field__slot"
                    >
                      <input
                        placeholder="Short description"
                        type="text"
                      />
                    </div>
                  </div>
                  <div
                    class="v-text-field__details"
                  >
                    <div
                      class="v-messages theme--light"
                    >
                      <div
                        class="v-messages__wrapper"
                      />
                    </div>
                  </div>
                </div>
              </div>
            </div>
             
            <div
              class="flex xs12"
            >
              <div
                class="mb-2 text-uppercase grey--text font-weight-bold"
              >
                
              Content
            
              </div>
               
              <div
                class="editor"
              >
                <div
                  class="menubar"
                >
                  <div
                    class="menubar"
                  >
                    <button
                      class="menubar__button"
                    >
                      
          H1
        
                    </button>
                     
                    <button
                      class="menubar__button"
                    >
                      
          H2
        
                    </button>
                     
                    <button
                      class="menubar__button"
                    >
                      
          H3
        
                    </button>
                     
                    <button
                      class="v-btn v-btn--icon v-btn--depressed theme--light"
                      type="button"
                    >
                      <div
                        class="v-btn__content"
                      >
                        <i
                          aria-hidden="true"
                          class="v-icon material-icons theme--light"
                        >
                          format_bold
                        </i>
                      </div>
                    </button>
                     
                    <button
                      class="v-btn v-btn--icon v-btn--depressed theme--light"
                      type="button"
                    >
                      <div
                        class="v-btn__content"
                      >
                        <i
                          aria-hidden="true"
                          class="v-icon material-icons theme--light"
                        >
                          format_italic
                        </i>
                      </div>
                    </button>
                     
                    <button
                      class="v-btn v-btn--icon v-btn--depressed theme--light"
                      type="button"
                    >
                      <div
                        class="v-btn__content"
                      >
                        <i
                          aria-hidden="true"
                          class="v-icon material-icons theme--light"
                        >
                          format_underlined
                        </i>
                      </div>
                    </button>
                     
                    <button
                      class="v-btn v-btn--depressed theme--light"
                      type="button"
                    >
                      <div
                        class="v-btn__content"
                      >
                        
          Add variable
        
                      </div>
                    </button>
                  </div>
                </div>
                 
                <div
                  class="editor__content pa-3"
                >
                  <div
                    class="ProseMirror"
                    contenteditable="true"
                    tabindex="0"
                  >
                    <p>
                      <br />
                    </p>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
         
        <div
          class="v-card__actions"
        >
          <button
            class="v-btn v-btn--depressed theme--light"
            type="button"
          >
            <div
              class="v-btn__content"
            >
              
          Cancel
        
            </div>
          </button>
           
          <button
            class="v-btn v-btn--loader v-btn--depressed theme--light primary"
            type="button"
          >
            <div
              class="v-btn__content"
            >
              
          Submit
        
            </div>
            <span
              class="v-btn__loading"
            >
              <div
                aria-valuemax="100"
                aria-valuemin="0"
                class="v-progress-circular v-progress-circular--indeterminate"
                role="progressbar"
                style="height: 23px; width: 23px;"
              >
                <svg
                  style="transform: rotate(0deg);"
                  viewBox="21.904761904761905 21.904761904761905 43.80952380952381 43.80952380952381"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <circle
                    class="v-progress-circular__overlay"
                    cx="43.80952380952381"
                    cy="43.80952380952381"
                    fill="transparent"
                    r="20"
                    stroke-dasharray="125.664"
                    stroke-dashoffset="125.66370614359172px"
                    stroke-width="3.8095238095238093"
                  />
                </svg>
                <div
                  class="v-progress-circular__info"
                />
              </div>
            </span>
          </button>
           
          <div
            class="spacer"
          />
           
          <button
            class="v-btn v-btn--depressed theme--light"
            type="button"
          >
            <div
              class="v-btn__content"
            >
              
          Delete
        
            </div>
          </button>
        </div>
      </div>
    </div>
     
    <div
      class="flex xs12 sm12 md4 xl3"
    >
      <div
        class="ml-2 mt-2 v-card v-sheet theme--light"
      >
        <div
          class="v-card__text"
        >
          <!---->
           
          <!---->
           
          <div
            class="v-input v-text-field v-text-field--single-line v-text-field--enclosed v-text-field--outline v-select theme--light"
            role="combobox"
          >
            <div
              class="v-input__control"
            >
              <div
                class="v-input__slot"
              >
                <div
                  class="v-select__slot"
                >
                  <div
                    class="v-select__selections"
                  >
                    <input
                      aria-readonly="false"
                      autocomplete="on"
                      readonly="readonly"
                      type="text"
                    />
                  </div>
                  <div
                    class="v-input__append-inner"
                  >
                    <div
                      class="v-input__icon v-input__icon--append"
                    >
                      <i
                        aria-hidden="true"
                        class="v-icon material-icons theme--light"
                      >
                        arrow_drop_down
                      </i>
                    </div>
                  </div>
                </div>
                <div
                  class="v-menu"
                >
                  <div
                    class="v-menu__content theme--light "
                    style="max-height: 300px; min-width: 0px; max-width: auto; top: 12px; left: 0px; transform-origin: top left; z-index: 0; display: none;"
                  >
                    <div
                      class="v-select-list v-card theme--light"
                    >
                      <div
                        class="v-list theme--light"
                        role="list"
                      >
                        <div
                          role="listitem"
                        >
                          <div
                            class="v-list__tile theme--light"
                          >
                            <div
                              class="v-list__tile__content"
                            >
                              <div
                                class="v-list__tile__title"
                              >
                                No data available
                              </div>
                            </div>
                          </div>
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
              <div
                class="v-text-field__details"
              >
                <div
                  class="v-messages theme--light"
                >
                  <div
                    class="v-messages__wrapper"
                  />
                </div>
              </div>
            </div>
          </div>
        </div>
         
        <div
          class="v-card__actions"
        >
          <div
            class="layout text-xs-center row wrap"
          >
            <div
              class="flex mb-2 xs12"
            >
              <button
                class="v-btn v-btn--block v-btn--loader v-btn--depressed theme--light primary"
                type="button"
              >
                <div
                  class="v-btn__content"
                >
                  
              Submit
            
                </div>
                <span
                  class="v-btn__loading"
                >
                  <div
                    aria-valuemax="100"
                    aria-valuemin="0"
                    class="v-progress-circular v-progress-circular--indeterminate"
                    role="progressbar"
                    style="height: 23px; width: 23px;"
                  >
                    <svg
                      style="transform: rotate(0deg);"
                      viewBox="21.904761904761905 21.904761904761905 43.80952380952381 43.80952380952381"
                      xmlns="http://www.w3.org/2000/svg"
                    >
                      <circle
                        class="v-progress-circular__overlay"
                        cx="43.80952380952381"
                        cy="43.80952380952381"
                        fill="transparent"
                        r="20"
                        stroke-dasharray="125.664"
                        stroke-dashoffset="125.66370614359172px"
                        stroke-width="3.8095238095238093"
                      />
                    </svg>
                    <div
                      class="v-progress-circular__info"
                    />
                  </div>
                </span>
              </button>
            </div>
             
            <div
              class="flex mb-2 xs12"
            >
              <button
                class="v-btn v-btn--block v-btn--disabled v-btn--depressed theme--light"
                disabled="disabled"
                type="button"
              >
                <div
                  class="v-btn__content"
                >
                  
              Preview
            
                </div>
              </button>
            </div>
             
            <div
              class="flex xs12"
            >
              <!---->
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`component/doc-templates/BasicInformation Snapshots Populated 1`] = `
<div
  class="container"
>
  <div
    class="layout row wrap"
  >
    <div
      class="flex xs12 sm12 md8 xl9"
    >
      <div
        class="ml-2 mt-2 v-card v-sheet theme--light"
      >
        <div
          class="v-card__title"
        >
          <h3
            class="grey--text"
          >
            
          Basic Information
        
          </h3>
           
          <!---->
        </div>
         
        <hr
          class="v-divider theme--light"
        />
         
        <div
          class="v-card__text"
        >
          <div>
            <div
              class="flex xs12"
            >
              <div
                class="mb-2 text-uppercase grey--text font-weight-bold"
              >
                
              Title
            
              </div>
               
              <div
                class="v-input v-text-field v-text-field--single-line v-text-field--enclosed v-text-field--outline v-text-field--placeholder v-input--is-label-active v-input--is-dirty theme--light"
              >
                <div
                  class="v-input__control"
                >
                  <div
                    class="v-input__slot"
                  >
                    <div
                      class="v-text-field__slot"
                    >
                      <input
                        placeholder="Title"
                        type="text"
                      />
                    </div>
                  </div>
                  <div
                    class="v-text-field__details"
                  >
                    <div
                      class="v-messages theme--light"
                    >
                      <div
                        class="v-messages__wrapper"
                      />
                    </div>
                  </div>
                </div>
              </div>
            </div>
             
            <div
              class="flex xs12"
            >
              <div
                class="mb-2 text-uppercase grey--text font-weight-bold"
              >
                
              Short description
            
              </div>
               
              <div
                class="v-input v-text-field v-text-field--single-line v-text-field--enclosed v-text-field--outline v-text-field--placeholder v-input--is-label-active v-input--is-dirty theme--light"
              >
                <div
                  class="v-input__control"
                >
                  <div
                    class="v-input__slot"
                  >
                    <div
                      class="v-text-field__slot"
                    >
                      <input
                        placeholder="Short description"
                        type="text"
                      />
                    </div>
                  </div>
                  <div
                    class="v-text-field__details"
                  >
                    <div
                      class="v-messages theme--light"
                    >
                      <div
                        class="v-messages__wrapper"
                      />
                    </div>
                  </div>
                </div>
              </div>
            </div>
             
            <div
              class="flex xs12"
            >
              <div
                class="mb-2 text-uppercase grey--text font-weight-bold"
              >
                
              Content
            
              </div>
               
              <div
                class="editor"
              >
                <div
                  class="menubar"
                >
                  <div
                    class="menubar"
                  >
                    <button
                      class="menubar__button"
                    >
                      
          H1
        
                    </button>
                     
                    <button
                      class="menubar__button"
                    >
                      
          H2
        
                    </button>
                     
                    <button
                      class="menubar__button is-active"
                    >
                      
          H3
        
                    </button>
                     
                    <button
                      class="v-btn v-btn--icon v-btn--depressed theme--light"
                      type="button"
                    >
                      <div
                        class="v-btn__content"
                      >
                        <i
                          aria-hidden="true"
                          class="v-icon material-icons theme--light"
                        >
                          format_bold
                        </i>
                      </div>
                    </button>
                     
                    <button
                      class="v-btn v-btn--icon v-btn--depressed theme--light"
                      type="button"
                    >
                      <div
                        class="v-btn__content"
                      >
                        <i
                          aria-hidden="true"
                          class="v-icon material-icons theme--light"
                        >
                          format_italic
                        </i>
                      </div>
                    </button>
                     
                    <button
                      class="v-btn v-btn--icon v-btn--depressed theme--light"
                      type="button"
                    >
                      <div
                        class="v-btn__content"
                      >
                        <i
                          aria-hidden="true"
                          class="v-icon material-icons theme--light"
                        >
                          format_underlined
                        </i>
                      </div>
                    </button>
                     
                    <button
                      class="v-btn v-btn--depressed theme--light"
                      type="button"
                    >
                      <div
                        class="v-btn__content"
                      >
                        
          Add variable
        
                      </div>
                    </button>
                  </div>
                </div>
                 
                <div
                  class="editor__content pa-3"
                >
                  <div
                    class="ProseMirror"
                    contenteditable="true"
                    tabindex="0"
                  >
                    <h3>
                      Catering Contract
                    </h3>
                    <p>
                      This Catering Contract is entered into between 2 Brothers Kitchen (“Caterer”) and John Smith (“Client”) (together, “Parties”) and sets forth the agreement between the Parties relating to catering services to be provided by the Caterer for Client for the event identified in this Contract.
                    </p>
                    <h3>
                      1. Event Details
                    </h3>
                    <p>
                      Client is hiring Caterer to provide food and beverages, and related services, for the following event (“Event”): Date: June 12, 2019 Event start time (for guests): 10:00 AM Event end time (for guests): 4:00 PM Location: LA Stadium (“Venue”) Estimated number of guests: 300
                    </p>
                    <h3>
                      2. Menu to Be Served
                    </h3>
                    <p>
                      The Parties have agreed to the menu attached to this Catering Agreement as Exhibit A. Caterer reserves the right to make small changes to the menu if key ingredients are unable to be sourced due to reasons beyond the control of the Parties. The following limitations will apply to this reservation of right - {{event.LimitationsOnMenuAlterations}}. No alcoholic beverages will be served without a separate agreement relating thereto.
                    </p>
                    <h3>
                      3. Coordination with Venue
                    </h3>
                    <p>
                      Caterer will need to have access to the Venue no later than {{event.PrepAdvanceTime}} hours in advance of the Start Time for the Event, and {{event.CleanUpTime}} hours after the End Time for clean up. Client will make all necessary arrangements, at Client’s expense, to get this access arranged. In exchange for the services of Caterer as specified in this Catering Contract, Client will pay to Caterer $ {{event.PerPersonCharge}} per person attending the event, but in no event less than the Guest Count provided by Client to Caterer one week in advance of the Event. As of the signing of this Contract, the total amount is estimated to be $ {{event.EstimatedTotalCost}} (“Estimated Total Cost”). Payment will be made to the Caterer as follows: $ {{event.Deposit}} deposit due on the date of signing, and the balance of approximately $ {{event.ApproximateSecondPayment}} will be due one week in advance of the event. The exact amount due will be determined, and provided from Client to Caterer in writing, one week in advance of the Event along with a Final Guest Count.
                    </p>
                    <h3>
                      5. Responsibilities for Related Costs
                    </h3>
                    <p>
                      Client is solely responsible for all costs and/or deposits relating to use of the Venue, and for obtaining any necessary permissions, authorizations, or other requirement of Caterer providing services at the Venue.
                    </p>
                    <h3>
                      6. Insurance and Indemnification
                    </h3>
                    <p>
                      Caterer has, or will obtain, general liability insurance relating to Caterer’s services at the Event. However, Client will indemnify and hold harmless Caterer for any damage, theft, or loss of Caterer’s property occurring at the event, causes by any of Client’s guests.
                    </p>
                    <h3>
                      7. Cancellation
                    </h3>
                    <p>
                      If the Client needs to cancel the event, Client must provide written notice to Caterer along with any required cancellation fee described in this Catering Contract, to effect cancellation. Client understands that upon entering into this Contract, Caterer is committing time and resources to this Event and thus cancellation would result in lost income and lost business opportunities in an amount hard to precisely calculate. Therefore, the following cancellation limitations will apply. If Client requests cancellation of this Contract 90 days or more before the Event, Caterer shall be entitled to {{event.PercentFor90DayCancellation}} percent of the Estimated Total Cost. If Client requests cancellation 45-89 days before the Event, Caterer shall be entitled to {{event.PercentFor45DayCancellation}} percent of the Estimated Total Costs. If Client requests cancellation 31-44 days before the Event, Caterer shall be entitled to {{event.PercentFor31DayCancellation}} . After 30 days in advance of the Event, Caterer shall be entitled to 100 percent of the Estimated Total Cost. The Client’s deposit will be credited against the cancellation fees owed. Any balance will be payable upon the notice of cancellation.
                    </p>
                    <h3>
                      8. Legal Compliance
                    </h3>
                    <p>
                      Caterer will work in compliance with all applicable local health department rules and regulations relating to food preparation and food service.
                    </p>
                    <h3>
                      9. Assignment
                    </h3>
                    <p>
                      This Contract cannot be assigned by either Party without the other’s written consent, with the exception set forth in paragraph 10, below.
                    </p>
                    <h3>
                      10. Limitation of Remedies
                    </h3>
                    <p>
                      If Caterer cannot fulfill its obligations under this Contract for reasons outside of its control, Caterer may locate and retain a replacement catering company at no additional cost to Client, or refund Client’s money in full. Caterer will not be responsible for any additional damages or compensation under these circumstances.
                    </p>
                    <h3>
                      11. Resolution of Disputes
                    </h3>
                    <p>
                      The Parties agree to not post any negative information about the other arising out of this Contract or Event on any online forum or website without providing advance written notice of the intended content thereof, and providing the other party with an opportunity to resolve any issues between the parties amicably.
                    </p>
                    <h3>
                      12. Jurisdiction and Venue
                    </h3>
                    <p>
                      This Contract will be interpreted according to the laws of the State of [State] and any legal action must be filed in the County of [County] in the State of [State] .
                    </p>
                    <h3>
                      13. Entire Agreement
                    </h3>
                    <p>
                      This document, along with its exhibits and attachments, constitutes the entire agreement between the Parties.
                    </p>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
         
        <div
          class="v-card__actions"
        >
          <button
            class="v-btn v-btn--depressed theme--light"
            type="button"
          >
            <div
              class="v-btn__content"
            >
              
          Cancel
        
            </div>
          </button>
           
          <button
            class="v-btn v-btn--depressed theme--light primary"
            type="button"
          >
            <div
              class="v-btn__content"
            >
              
          Save changes
        
            </div>
          </button>
           
          <div
            class="spacer"
          />
           
          <button
            class="v-btn v-btn--depressed theme--light"
            type="button"
          >
            <div
              class="v-btn__content"
            >
              
          Delete
        
            </div>
          </button>
        </div>
      </div>
    </div>
     
    <div
      class="flex xs12 sm12 md4 xl3"
    >
      <div
        class="ml-2 mt-2 v-card v-sheet theme--light"
      >
        <div
          class="v-card__text"
        >
          <h3
            class="font-weight-bold mb-2"
          >
            
          Last Modified on
        
          </h3>
           
          <span
            class="mb-2"
          >
            Sep 30, 2019 • 3:51 AM by 
            <u>
              Demo Admin
            </u>
          </span>
           
          <div
            class="v-input v-text-field v-text-field--single-line v-text-field--enclosed v-text-field--outline v-select v-input--is-label-active v-input--is-dirty theme--light"
            role="combobox"
          >
            <div
              class="v-input__control"
            >
              <div
                class="v-input__slot"
              >
                <div
                  class="v-select__slot"
                >
                  <div
                    class="v-select__selections"
                  >
                    <div
                      class="v-select__selection v-select__selection--comma"
                    >
                      Draft
                    </div>
                    <input
                      aria-readonly="false"
                      autocomplete="on"
                      readonly="readonly"
                      type="text"
                    />
                  </div>
                  <div
                    class="v-input__append-inner"
                  >
                    <div
                      class="v-input__icon v-input__icon--append"
                    >
                      <i
                        aria-hidden="true"
                        class="v-icon material-icons theme--light"
                      >
                        arrow_drop_down
                      </i>
                    </div>
                  </div>
                </div>
                <div
                  class="v-menu"
                >
                  <div
                    class="v-menu__content theme--light "
                    style="max-height: 300px; min-width: 0px; max-width: auto; top: 12px; left: 0px; transform-origin: top left; z-index: 0; display: none;"
                  >
                    <div
                      class="v-select-list v-card theme--light"
                    >
                      <div
                        class="v-list theme--light"
                        role="list"
                      >
                        <div
                          class="primary--text"
                          role="listitem"
                        >
                          <a
                            class="v-list__tile v-list__tile--link v-list__tile--active theme--light primary--text"
                          >
                            <div
                              class="v-list__tile__content"
                            >
                              <div
                                class="v-list__tile__title"
                              >
                                Draft
                              </div>
                            </div>
                          </a>
                        </div>
                        <div
                          role="listitem"
                        >
                          <a
                            class="v-list__tile v-list__tile--link theme--light"
                          >
                            <div
                              class="v-list__tile__content"
                            >
                              <div
                                class="v-list__tile__title"
                              >
                                Published
                              </div>
                            </div>
                          </a>
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
              <div
                class="v-text-field__details"
              >
                <div
                  class="v-messages theme--light"
                >
                  <div
                    class="v-messages__wrapper"
                  />
                </div>
              </div>
            </div>
          </div>
        </div>
         
        <div
          class="v-card__actions"
        >
          <div
            class="layout text-xs-center row wrap"
          >
            <div
              class="flex mb-2 xs12"
            >
              <button
                class="v-btn v-btn--block v-btn--depressed theme--light primary"
                type="button"
              >
                <div
                  class="v-btn__content"
                >
                  
              Save changes
            
                </div>
              </button>
            </div>
             
            <div
              class="flex mb-2 xs12"
            >
              <button
                class="v-btn v-btn--block v-btn--disabled v-btn--depressed theme--light"
                disabled="disabled"
                type="button"
              >
                <div
                  class="v-btn__content"
                >
                  
              Preview
            
                </div>
              </button>
            </div>
             
            <div
              class="flex xs12"
            >
              <a
                href="#/move-to-trash"
              >
                Move to trash
              </a>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
